--- a/javascript/index.html
+++ b/javascript/index.html
@@ -13,6 +13,7 @@
         // Your JavaScript goes here!
         console.log("Hello, World!")
     </script>
+    <script src="./js/script.js"></script>
 
 </body>
 
