--- a/javascript/index.html
+++ b/javascript/index.html
@@ -5,16 +5,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script type="module" src="./js/script.js"></script>
+    <!-- <script type="module" src="./js/script.js"></script> -->
 </head>
 
 <body>
     <button type="button">Button</button>
 
-    <script>
-        // Your JavaScript goes here!
-        console.log("Hello, World!")
-    </script>
+    <script src="./js/functions.js"></script>
 
 </body>
 
