--- a/javascript/index.html
+++ b/javascript/index.html
@@ -11,7 +11,7 @@
 <body>
     <button type="button">Button</button>
 
-    <script src="./js/functions.js"></script>
+    <script src="./js/script.js"></script>
 
 </body>
 
