Add html pages with buttons that listen to events via js

--- a/javascript/pages/domManipulation.html
+++ b/javascript/pages/domManipulation.html
@@ -11,6 +11,13 @@
 <body>
     <h1>DOM Manipulation</h1>
     <div id="container"></div>
+
+    <h1>Events</h1>
+    <button onclick="alert('Hello World')">JS embedded directly in HTML</button>
+    <br>
+    <button id="btn">JS script in file sets onclick property</button>
+    <br>
+    <button id="eventBtn">JS script in file adds listener on button for click</button>
 </body>
 
 </html>
