--- a/javascript/pages/dom-example.html
+++ b/javascript/pages/dom-example.html
@@ -13,7 +13,13 @@
             alt="A red Tyrannosaurus Rex: A two legged dinosaur standing upright like a human, with small arms, and a large head with lots of sharp teeth.">
         <p>Here we will add a link to the <a href="https://www.mozilla.org/">Mozilla homepage</a></p>
     </section>
-    <script></script>
+    <script>
+        const link = document.querySelector("a");
+        link.textContent = "Mozilla Developer Network";
+        link.href = "https://developer.mozilla.org";
+
+        const sect = document.querySelector("section");
+    </script>
 </body>
 
 </html>
