--- a/javascript/pages/dom-example.html
+++ b/javascript/pages/dom-example.html
@@ -5,6 +5,15 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Simple DOM example</title>
+    <style>
+        .highlight {
+            color: white;
+            background-color: black;
+            padding: 10px;
+            width: 250px;
+            text-align: center;
+        }
+    </style>
 </head>
 
 <body>
@@ -19,6 +28,17 @@
         link.href = "https://developer.mozilla.org";
 
         const sect = document.querySelector("section");
+        const para = document.createElement("p");
+        para.textContent = "We hoped you enjoyed the ride.";
+        sect.appendChild(para);
+        const text = document.createTextNode(" -- the premier source for web development knowledge.");
+        const linkPara = document.querySelector("p");
+        linkPara.appendChild(text);
+        sect.appendChild(linkPara);
+        // sect.removeChild(linkPara);
+        // linkPara.remove();
+        // linkPara.parentNode.removeChild(linkPara);
+        para.setAttribute("class", "highlight");
     </script>
 </body>
 
