--- a/tables/planets.html
+++ b/tables/planets.html
@@ -10,8 +10,152 @@
 
 <body>
     <h1>Table template</h1>
-
-
+    <table>
+        <caption>Data about the planets of our solar system (planetary facts taken from
+            <a href="https://google.com">Nasa's Planetary Fact Sheet - Metric</a>
+        </caption>
+        <colgroup>
+            <col span="2">
+            <col style="border: 2px solid black">
+            <col span="9">
+        </colgroup>
+        <thead>
+            <tr>
+                <td colspan=2></td>
+                <th>Mass</th>
+                <th>Name</th>
+                <th>Diameter</th>
+                <th>Density</th>
+                <th>Gravity</th>
+                <th>Length of Day</th>
+                <th>Distance from Sun</th>
+                <th>Mean Temperature</th>
+                <th>Number of Moons</th>
+                <th>Notes</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <th rowspan=4 colspan=2>
+                    Terrestrial Planets
+                </th>
+                <th>Mercury</th>
+                <td>0.330 </td>
+                <td>4,879 </td>
+                <td>5427 </td>
+                <td>3.7 </td>
+                <td>4222.6 </td>
+                <td>57.9 </td>
+                <td>167 </td>
+                <td>0</td>
+                <td>Closest to the Sun</td>
+            </tr>
+            <tr>
+                <th>Venus</th>
+                <td>4.87</td>
+                <td>12,104</td>
+                <td>5243</td>
+                <td>8.9</td>
+                <td>2802.0</td>
+                <td>108.2</td>
+                <td>464</td>
+                <td>0</td>
+                <td></td>
+            </tr>
+            <tr>
+                <th>Earth</th>
+                <td>5.97</td>
+                <td>12,756</td>
+                <td>5514</td>
+                <td>9.8</td>
+                <td>24.0</td>
+                <td>149.6</td>
+                <td>15</td>
+                <td>1</td>
+                <td>Our world</td>
+            </tr>
+            <tr>
+                <th>Mars</th>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+            </tr>
+            <tr>
+                <th rowspan=4>Jovian Planets</th>
+                <th rowspan=2>Gas Giants</th>
+                <th>Jupiter</th>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+            </tr>
+            <tr>
+                <th>Saturn</th>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+            </tr>
+            <tr>
+                <th rowspan=2>Ice Giants</th>
+                <th>Uranus</th>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+            </tr>
+            <tr>
+                <th>Neptune</th>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+            </tr>
+        </tbody>
+        <tfoot>
+            <tr>
+                <th colspan=2>Dwarf Planets</th>
+                <th>Pluto</th>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td>Declassified as planet in 2008, but this remains
+                    <a href="https://google.com">controversial</a>
+                </td>
+            </tr>
+        </tfoot>
+    </table>
 </body>
 
 </html>
