Finish carousel exercise with very ugly styling

--- a/image-carousel/index.html
+++ b/image-carousel/index.html
@@ -5,18 +5,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="./style.css">
     <script src="./script.js" defer></script>
 </head>
 
 <body>
+    <button class="left">Go left</button>
     <div class="frame">
         <div class="pics">
-            <img src="./place0.png" alt="placeholder">
-            <img src="./place1.png" alt="placeholder">
-            <img src="./place2.png" alt="placeholder">
-            <img src="./place3.png" alt="placeholder">
-            <img src="./place4.png" alt="placeholder">
         </div>
+    </div>
+    <button class="right">Go right</button>
+    <div class="where">
     </div>
 </body>
 
